# ipc-zk

./: .gitignore  Cargo.toml  README.md
.github/workflows/: lint.yml
src/: prover.rs  verifier.rs
tests/: tests.rs
tests/proofs/: evm_proof  state_proof
