[package]
name = "ipc-zk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zkevm = { git = "https://github.com/scroll-tech/common-rs" }
types = { git = "https://github.com/scroll-tech/common-rs" }
structopt = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.66"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4"

[dev-dependencies]
rand_xorshift = "0.3"
rand = "0.8"

[lib]
name = "ipc_zk"
path = "src/lib.rs"

[[bin]]
name = "ipc_prover"
path = "src/bin/prover.rs"

[[bin]]
name = "ipc_verifier"
path = "src/bin/verifier.rs"

[patch.crates-io]
# This fork makes bitvec 0.20.x work with funty 1.1 and funty 1.2.  Without
# this fork, bitvec 0.20.x is incompatible with funty 1.2, which we depend on,
# and leads to a compilation error.  This can be removed once the upstream PR
# is resolved: https://github.com/bitvecto-rs/bitvec/pull/141
bitvec = { git = "https://github.com/ed255/bitvec.git", rev = "5cfc5fa8496c66872d21905e677120fc3e79693c" }

# Definition of benchmarks profile to use.
[profile.test]
opt-level = 3
debug-assertions = true

[profile.release]
opt-level = 3
debug-assertions = true

[features]
default = []
prove = []